# nlp_toolbox

./: .gitignore  README.md
fastgpt/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  deploy.sh  docker-compose.yml  requirements-dev.txt  task-definition.json  trust-policy.json  url_example.txt
fastgpt/auth_example/: header_form_auth.py
fastgpt/llm_context/: fasthtml_llms-ctx.txt
fastgpt/notebooks/: demo.py  fastlit.ipynb
fastgpt/src/: main.py  requirements.txt
fastgpt/src/utils/: auth.py  (+4 more)
fastgpt/utils/: url_encode.py
fasthtml_playground/: notes.md  pyproject.toml  scratch.py
fasthtml_playground/fasthtml_playground/client/: .sesskey  chat_example.py  main.py  openai_chat.py  post_request_htmx.py  post_request_simple.py  proto.py  requ_params.py  spacing.py
fasthtml_playground/fasthtml_playground/server/: app.py  search.py
fasthtml_playground/fasthtml_playground/server/index_func/datamodels/: mapping.py  model.py  results.py
fasthtml_playground/fasthtml_playground/server/index_func/utils/: generic_utils.py  list_fields.py  os_utils.py
fasthtml_playground/fasthtml_playground/server/utils/: test_server.py
fasthtml_playground/llms-ctx/: monsterui.txt
fasthtml_playground/utils/: param_encoding.py  url_params.py
html_parsing/: fix.py  test_fix.py
office_docs/: sentiment_analysis.txt
rerankers/: README.md  config.py  deploy.py  requirements.txt  test_endpoint.ipynb
rerankers/source_code/: inference.py  requirements.txt
rerankers/test_results/: latency_test_20250317-134029.txt
setup/: .tmux.conf
text_classification/: by_the_book.ipynb
(+4 files in other folders)
